# hcloud-fip-controller

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  lint-and-test-chart.yaml
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/templates/: cluser-role-binding.yaml  cluser-role.yaml  deployment.yaml  service-account.yaml
src/: main.rs
